--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
 			<artifactId>collection-cacheable-for-spring-starter</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
